tests/snapshots/render_snapshots__connection_setup_form.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | default | - | - | no dsn                                         
┌ [1] Explorer ┐[Cols] [Idx] [FK] [RLS] [DDL]                                   
│Connections   │┌ [2] Inspector ───────────────────────────────────────────────┐
│ Current: loca││(select a table)                                              │
│              ││                                                              │
│Tables        ││                                                              │
│ Pr╭ Connection Setup ────────────────────────────────────────────────────╮   │
│   │                                                                      │   │
│   │  Host:       [ localhost█                           ]                │   │
│   │  Port:       [ 5432                                 ]                │   │
│   │  Database:   [ mydb                                 ]                │   │
│   │  User:       [ postgres                             ]                │───┘
│   │  Password:   [                                      ]                │───┐
│   │  SSL Mode:   [ prefer ▼ ]                                            │   │
│   │                                                                      │   │
│   │  Note: Connection info is stored locally in plain text               │   │
│   │                                                                      │   │
│   ╰ Tab: Next │ Shift+Tab: Prev │ Ctrl+S: Save │ Esc: Cancel ────────────╯   │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
^S:Save  Tab:Next  ⇧Tab:Prev  Esc:Cancel
