tests/snapshots/render_snapshots__er_table_picker_filtered.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Cols] [Idx] [FK] [RLS] [DDL]                               
│public.users      │┌ [2] Inspector ───────────────────────────────────────────┐
│public.posts      ││(select a table)                                          │
│public.comments╭ ER Diagram ──────────────────────────────────╮               │
│               │  > user█                                     │               │
│               │  Mode:    Invalid                            │               │
│               │  Targets: —                                  │               │
│               │  Output:  —                                  │               │
│               │▸     public.users                            │               │
│               │                                              │               │
│               │                                              │───────────────┘
│               │                                              │───────────────┐
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               ╰ 0/3 selected │ Space Select │ ^A All │ Enter ╯               │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
Enter:Generate  Space:Select  ^A:All  type:Filter  ↑↓:Navigate  Esc:Close
