tests/snapshots/render_snapshots__er_table_picker_multi_select.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Cols] [Idx] [FK] [RLS] [DDL]                               
│public.users      │┌ [2] Inspector ───────────────────────────────────────────┐
│public.posts      ││(select a table)                                          │
│public.comments╭ ER Diagram ──────────────────────────────────╮               │
│               │  > █                                         │               │
│               │  Mode:    Partial ER                         │               │
│               │  Targets: 2 tables                           │               │
│               │  Output:  er_partial_multi_2_89466781.dot    │               │
│               │▸   ✔ public.users                            │               │
│               │    ✔ public.posts                            │               │
│               │      public.comments                         │───────────────┘
│               │                                              │───────────────┐
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               ╰ 2/3 selected │ Space Select │ ^A All │ Enter ╯               │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
Enter:Generate  Space:Select  ^A:All  type:Filter  ↑↓:Navigate  Esc:Close
