tests/snapshots/render_snapshots__er_table_picker_single_select.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Cols] [Idx] [FK] [RLS] [Trig] [DDL]                        
│public.users      │┌ [2] Inspector ───────────────────────────────────────────┐
│public.posts      ││(select a table)                                          │
│public.comments╭ ER Diagram ──────────────────────────────────╮               │
│               │  > █                                         │               │
│               │  Mode:    Partial ER                         │               │
│               │  Targets: public.users                       │               │
│               │  Output:  er_partial_public_users.dot        │               │
│               │▸   ✔ public.users                            │               │
│               │      public.posts                            │               │
│               │      public.comments                         │───────────────┘
│               │                                              │───────────────┐
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               ╰ 1/3 selected │ Space Select │ ^A All │ Enter ╯               │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
Enter:Generate  Space:Select  ^A:All  type:Filter  ↑↓:Navigate  Esc:Close
