tests/snapshots/render_snapshots__er_waiting_progress.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│> public.users    │┌ [2] Inspector ───────────────────────────────────────────┐
│  public.posts    ││(select a table)                                          │
│  public.comments ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  │└──────────────────────────────────────────────────────────┘
│                  │┌ [3] Result ──────────────────────────────────────────────┐
│                  ││(select a table to preview)                               │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
◐ Preparing ER... (1/3)
