tests/snapshots/render_snapshots__explorer_connections_mode.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ┐[Cols] [Idx] [FK] [RLS] [DDL]                                   
│> ● Production│┌ [2] Inspector ───────────────────────────────────────────────┐
│    Staging   ││(select a table)                                              │
│    Local Dev ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              │└──────────────────────────────────────────────────────────────┘
│              │┌ [3] Result ──────────────────────────────────────────────────┐
│              ││(select a table to preview)                                   │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
Enter:Connect  j/k:Navigate  ?:Help  c:Tables  Esc:Back  q:Quit
